@@ -16,21 +16,24 @@
   </job>
   <job submitter="775100" format="katalog">
     <plugin name="marcxchangeharvester" classname="dk.dbc.opensearch.plugins.MarcxchangeHarvester" position="0"/>
-    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="1" />
-    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="2" />
-    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="3" />
+    <plugin name="forcefedorapid" classname="dk.dbc.opensearch.plugins.ForceFedoraPid" position="1"/>
+    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="2" />
+    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="3" />
+    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="4" />
   </job>
   <job submitter="775100" format="ebsco">
     <plugin name="marcxchangeharvester" classname="dk.dbc.opensearch.plugins.MarcxchangeHarvester" position="0"/>
-    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="1" />
-    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="2" />
-    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="3" />
+    <plugin name="forcefedorapid" classname="dk.dbc.opensearch.plugins.ForceFedoraPid" position="1"/>
+    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="2" />
+    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="3" />
+    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="4" />
   </job>
   <job submitter="775100" format="ebrary">
     <plugin name="marcxchangeharvester" classname="dk.dbc.opensearch.plugins.MarcxchangeHarvester" position="0"/>
-    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="1" />
-    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="2" />
-    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="3" />
+    <plugin name="forcefedorapid" classname="dk.dbc.opensearch.plugins.ForceFedoraPid" position="1"/>
+    <plugin name="store" classname="dk.dbc.opensearch.plugins.Store" position="2" />
+    <plugin name="ownerrelation" classname="dk.dbc.opensearch.plugins.OwnerRelation" position="3" />
+    <plugin name="marcxchangeworkrelation" classname="dk.dbc.opensearch.plugins.MarcxchangeWorkRelation" position="4" />
   </job>
   <job submitter="710100" format="katalog">
     <plugin name="marcxchangeharvester" classname="dk.dbc.opensearch.plugins.MarcxchangeHarvester" position="0"/>
