@@ -1,4 +1,5 @@
 0.7.1
+   - bug [9004] "new option to store xmles requests as itemorders"
    - bug [9406] "Hudson compile af unit test fejler after revision 5285"
    - bug [9337] "dist_copy skal kunne lave en tar.gz"
 	Upgraded fedora libraries to 3.2.1, improved Digital Object handlingFinished tests for FedoraToolsfixing date formatting in fedoraadminstration
